package id.ac.ugm.sv.trpl.glucosemonitoring.domain.common.util

object TestTags {
    
    const val GLUCOSE_CHART = "glucose_chart"
    const val STATS_LAST_VALUE = "stats_last_value"
    const val STATS_AVERAGE = "stats_average"
    const val STATS_MAX = "stats_max"
    const val STATS_MIN = "stats_min"
    const val TIR_PERCENTAGE = "tir_percentage"
    const val GLUCOSE_RECOMMENDATION = "glucose_recommendation"
    const val BLOOD_PRESSURE_RECOMMENDATION = "blood_pressure_recommendation"
    const val BMI_RECOMMENDATION = "bmi_recommendation"
    
    const val INPUT_TIME = "input_time"
    
    const val GLUCOSE_ALARMS_SWITCH = "glucose_alarms_switch"
    
}