...
    navigateToEventDetails: (Event) -> Unit,
    navigateToAddEventForm: () -> Unit,
    onBack: () -> Unit,
    modifier: Modifier = Modifier,
    viewModel: EventListViewModel = hiltViewModel(),
) {
    EventListContent(
        state = viewModel.uiState.collectAsStateWithLifecycle().value,
        navigateToEventDetails = navigateToEventDetails,
        navigateToAddEventForm = navigateToAddEventForm,
        onBack = onBack,
        modifier = modifier,
    )
...
